test/parser/negative/ImplicitIntegerConstantCasts.java.not_yet
class ImplicitIntegerConstantCasts {
    public ImplicitIntegerConstantCasts() {}
    public byte x = /* (byte) */5;
}
